<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurface"
        android:titleTextColor="?attr/colorOnSurface"
        android:title="@string/title_todo_add"
        android:navigationIcon="@drawable/ic_arrow_back" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_title"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/page_padding"
        android:layout_marginTop="@dimen/form_field_spacing"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/ic_note"
        app:startIconTint="?attr/colorOnSurfaceVariant">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_todo_title"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_content"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/page_padding"
        android:layout_marginTop="@dimen/form_field_spacing"
        app:startIconDrawable="@drawable/ic_description"
        app:startIconTint="?attr/colorOnSurfaceVariant">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:hint="@string/hint_todo_content"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:scrollbars="vertical" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
